base/httproute/alertmanager-httproute.yaml
# Gateway API HTTPRoute for Alertmanager
# Requires Gateway API and Envoy Gateway installed
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "alertmanager.k8s.home"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alertmanager
          port: 9093
